flask-project/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: flask
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: karwa.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-service     # Must match your Service
            port:
              number: 80           # Must be a number, not a string
  tls:
  - hosts:
    - karwa.shop
    secretName: flask-tls
